--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,11 +1,23 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "incremental": true,
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@images/*": ["./src/assets/images/*"],
+      "@data/*": ["./src/assets/data/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@redux/*": ["./src/redux/*"],
+      "@constants/*": ["./src/constants/*"],
+      "@customTypes/*": ["./src/types/*"],
+      "@hooks/*": ["./src/hooks/*"],
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -19,9 +31,11 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+
+    /* Added */
+    "types": ["vite/client","node"],            
+    "esModuleInterop": true
   },
   "include": ["src"]
 }
