--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "formik": "^2.4.6",
     "react": "^19.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -27,6 +28,7 @@
     "@eslint/js": "^9.25.0",
     "@types/node": "^22.15.19",
     "@types/react": "^19.1.2",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.4.1",
